--- a/WESAD_Data_Preprocessing.ipynb
+++ b/WESAD_Data_Preprocessing.ipynb
@@ -18,7 +18,7 @@
       "cell_type": "markdown",
       "source": [
         "# Preprocessor that reads in the WESAD datasets.\n",
-        "They are in pickle format, so they must be read in and combined into one file"
+        "The files are in pickle format, so they must be read in and combined into one file"
       ],
       "metadata": {
         "id": "V3w0Zwad8vlT"
