--- a/HRV_Stress_Detection.ipynb
+++ b/HRV_Stress_Detection.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "\n",
         "# **2. Understanding the Data**\n",
-        "## ****Data Sources****\n",
+        "## **Data Sources**\n",
         "Developing an accurate machine learning model requires training data of heart rate signals during various target conditions, such as subjects that were relaxed or under stressful circumstances.\n",
         "\n",
         "An ideal data source was identified:\n",
