--- a/HRV_Stress_Detection.ipynb
+++ b/HRV_Stress_Detection.ipynb
@@ -18,6 +18,7 @@
         "If there was a way that a person could accurately and inexpensively measure their stress levels without going to a clinic, they could use that information as feedback so that they could learn to monitor and control their stress levels on their own.\n",
         "## **Capstone Research Question**\n",
         "\n",
+        "\n",
         "***Can commonly available wearable devices be used to accurately self-monitor stress levels?***\n",
         "\n",
         "\n",
@@ -36,7 +37,7 @@
         " The original paper and links to download the dataset can be found via this link: https://archive.ics.uci.edu/dataset/465/wesad+wearable+stress+and+affect+detection\n",
         "\n",
         "\n",
-        "## ****Data Content****\n",
+        "## **Data Content**\n",
         "\n",
         "\n",
         " The WESAD dataset include Electrocardiogram (ECG) measures of various subjects during hours of stressing, amusing, relaxing, and neutral situations. Below is a table listing the ECG data field acronyms with their definitions, although a smaller subset will used:\n",
